<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <!-- Download notification text -->
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="download_notification_channel_id" translatable="false">download_channel</string>
    <string name="download_notification_channel_name" translatable="false">Download</string>

    <!-- Custom button text (Main Activity)-->
    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>

    <!--Radio Button Text -->
    <string name="glide_radio_text">Glide - Image Loading Library by BumpTech</string>
    <string name="loadApp_radio_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_radio_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <!-- Detail Activity text -->
    <string name="title_activity_detail">DetailActivity</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="ok">OK</string>
</resources>
