<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RadioGroup
        android:id="@+id/download_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/glide_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glide_radio_text"
            android:textSize="@dimen/default_text_size"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/loadApp_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loadApp_radio_text"
            android:paddingTop="20dp"
            android:textSize="@dimen/default_text_size"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/retrofit_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrofit_radio_text"
            android:paddingTop="20dp"
            android:textSize="@dimen/default_text_size"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:buttonColourCompleted="@color/colorPrimary"
        app:buttonColourClicked="@color/colorPrimaryDark"
        app:buttonColourLoading="@color/colorPrimaryDark"
        app:loadingCircleColour="@color/colorAccent"/>

</androidx.constraintlayout.widget.ConstraintLayout>